# Geneva

./: .gitignore  CMakeLists.txt  LICENSE  README
exp/datasets/: Enron.g  Enron.metadata  Enron.mygraph
exp/datasets/Enron/: Enron_4_6_0.query
exp/datasets/calCSR/: convert.cpp
exp/datasets/sinaweibo/sort/: data_sort.h
include/: calDVPhaseCount.h  common.h  genMatchOrder.h  genMatchOrderCPU.h  genMatchOrderSingleV.h  loadDataBase.h  miningPattern.h  reduction.h
scripts/: ReadData.py  calDVPhase.sh  compareCPUandGPUemb.py  convertData.py  convertData.sh  convertDataToOurFormat.py  convertDataToOurFormatSx.py  convertToCSR.py  extractEdges.py  findMax.py  findMaxForTwitter.py  genDatabase.sh  genPatents.py  genQuery.sh  gpumine.sh  gpumineSingleV.sh  hash.py  logger.py  mergeFiles.sh  testCalDVPhase.sh
src/: cpumine.cpp  genMatchOrder.cpp  genMatchOrderCPU.cpp  genMatchOrderSingleV.cpp  gpumine.cpp  gpumine_detail.cpp  gpumine_singleV.cpp  gpumine_singleV_detail.cpp  loadDataBase.cpp  miningPattern.cu  reduction.cu
tools/: calDVPhaseCount.cpp  classifyExtPhase.cpp  evalAccessTime.cu  genDatabase.cpp  genQuery.cpp
